# RayTracer

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: camera.cpp  camera.h  geometry.cpp  geometry.h  geometry.hpp  hittable.h  hittable.hpp  hittable_list.cpp  hittable_list.h  main.cpp  material.cpp  material.h  pch.cpp  pch.h  ray.h  ray.hpp  utils.h  vec3.h  vec3.hpp
